# MayaUvSnapshotPlus

./: .gitignore  CHANGELOG.md  MayaUvSnapshotEdgeDrawer.mod  MayaUvSnapshotPlus.mod  README.md  pyproject.toml
.agents/execplan/maya_ui_20260420_105240/: execplan.md  next_steps.md  progress.md  result.md  summary.json
.agents/execplan/rust_native_20260420_095127/: execplan.md  next_steps.md  progress.md  result.md  summary.json
.agents/execplan/rust_native_20260420_102407/: after1_1.stdout  after1_2.stdout  after1_3.stdout  after1_profile.stdout  after2_1.stdout  after2_2.stdout  after2_3.stdout  after2_profile.stdout  attribution.stdout  attribution2.stdout  baseline_1.stdout  baseline_2.stdout  baseline_3.stdout  execplan.md  final_1.stdout  final_2.stdout  final_3.stdout  final_profile.stdout  next_steps.md  probe256_profile.stdout  progress.md  result.md  summary.json
.agents/execplan/rust_native_20260420_103338/: execplan.md  next_steps.md  progress.md  result.md  summary.json
.github/workflows/: ci.yml  release-package.yml
python/: userSetup.py
python/uv_snapshot_edge_drawer/: __init__.py  startup.py  ui.py
rust/edge_drawer/: Cargo.toml
rust/edge_drawer/src/: lib.rs  main.rs
scripts/: package.py
scripts/uv_snapshot_edge_drawer/: __init__.py
