[package]
name = "edge_drawer"
version = "0.1.0"
edition = "2021"

[lib]
name = "edge_drawer"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.24"
imageproc = "0.23"
clap = "3.0"
pyo3 = { version = "0.22.6", features = ["abi3-py37", "extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "0.17.0"
tiny-skia = "0.11"

[dev-dependencies]
tempfile = "3.10"
