[package]
name = "edge_drawer"
version = "0.1.0"
edition = "2021"

[lib]
name = "edge_drawer"
crate-type = ["cdylib", "rlib"]

[features]
default = []
maya-abi3-py39 = ["pyo3/abi3-py39"]

[dependencies]
clap = "3.0"
pyo3 = { version = "0.22.6", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "0.17.0"
tiny-skia = "0.11"

[dev-dependencies]
tempfile = "3.10"
